--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nodemon": "^1.18.11"
   },
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "mongoose": "^5.5.4"
   }
 }
