Implementa versão inicial de e-mail de compra

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.4",
     "mongoose-paginate": "^5.0.3",
+    "nodemailer": "^6.1.1",
     "require-dir": "^1.2.0"
   }
 }
