--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
+    "express-validation": "^1.0.2",
+    "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
     "kue": "^0.11.6",
     "mongoose": "^5.5.4",
